--- a/src/pages/Todo/styles.scss
+++ b/src/pages/Todo/styles.scss
@@ -1,13 +1,38 @@
-.container {
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
+.container {
   width: 550px;
 
-  .header-label {
+  header {
     display: flex;
     justify-content: center;
-    font-size: 100px;
-    font-weight: 100;
-    color: rgba(175, 47, 47, 0.15);
-    margin: 5px auto;
+
+    .header-label {
+      display: flex;
+      justify-content: center;
+      font-size: 100px;
+      font-weight: 100;
+      color: rgba(175, 47, 47, 0.15);
+      margin: 5px auto;
+    }
+
+    .App-logo {
+      width: 25%;
+      height: auto;
+      pointer-events: none;
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+      }
+    }
   }
 }
