--- a/src/pages/Todo/styles.module.scss
+++ b/src/pages/Todo/styles.module.scss
@@ -7,31 +7,38 @@
   }
 }
 
-.container {
-  width: 550px;
+.wrapper {
 
-  header {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    .header-label {
+  .container {
+    width: 550px;
+
+    header {
       display: flex;
       justify-content: center;
-      font-size: 100px;
-      font-weight: 100;
-      color: rgba(175, 47, 47, 0.15);
-      margin: 5px auto;
-    }
 
-    .App-logo {
-      width: 25%;
-      height: auto;
-      pointer-events: none;
-    }
+      .header-label {
+        display: flex;
+        justify-content: center;
+        font-size: 100px;
+        font-weight: 100;
+        color: rgba(175, 47, 47, 0.15);
+        margin: 5px auto;
+      }
 
-    @media (prefers-reduced-motion: no-preference) {
       .App-logo {
-        animation: App-logo-spin infinite 20s linear;
+        width: 25%;
+        height: auto;
+        pointer-events: none;
+      }
+
+      @media (prefers-reduced-motion: no-preference) {
+        .App-logo {
+          animation: App-logo-spin infinite 20s linear;
+        }
       }
     }
   }
